Implementação de rotinas de teste de UI.